First working demo

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,10 +33,16 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
+# db.default.driver=org.h2.Driver
+# db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
+db.default.driver=oracle.jdbc.driver.OracleDriver
+db.default.url="jdbc:oracle:thin:@192.168.1.152:1521/XE"
+db.default.user=ghi_2fa
+db.default.pass=ghi_2fa
+
+
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
@@ -44,7 +50,7 @@ db.default.url="jdbc:h2:mem:play"
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+evolutionplugin=disabled
 
 # Ebean configuration
 # ~~~~~
@@ -65,4 +71,3 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
-
