--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -13,16 +13,16 @@
  - &marla !!models.Person
      id: 001
      titleId:
-     genderCode: F
+     genderCode: M
      maritalStatusId: 
-     surname: Singer
-     firstName: Marla
+     surname: Darrow
+     firstName: Scott
      middleName: ""
      preferredName: ""
-     dob: 1986-1-1
+     dob: 1970-1-1
      phoneHome: 555-0173
      phoneWork: ""
-     phoneMobile: 09297700500
+     phoneMobile: 09178042352
      phoneFax: ""
      email: "" 
      emailConfirmFlag: N
@@ -40,16 +40,16 @@
  - &tyler !!models.Person
      id: 002
      titleId:
-     genderCode: M
+     genderCode: F
      maritalStatusId: 
-     surname: Durden
-     firstName: Tyler
+     surname: Agbada
+     firstName: Aileen
      middleName: ""
      preferredName: ""
      dob: 1980-8-29
      phoneHome: 654-3210
      phoneWork: ""
-     phoneMobile: 09297700500
+     phoneMobile: 09178946745
      phoneFax: ""
      email: "" 
      emailConfirmFlag: N
@@ -69,14 +69,14 @@
      titleId:
      genderCode: M
      maritalStatusId: 
-     surname: Bauer
-     firstName: Jack
+     surname: Quetua
+     firstName: Gino
      middleName: ""
      preferredName: ""
      dob: 1979-3-12
      phoneHome: 654-3210
      phoneWork: ""
-     phoneMobile: 09297700500
+     phoneMobile: 09175160267
      phoneFax: ""
      email: "" 
      emailConfirmFlag: N
@@ -96,8 +96,8 @@
      titleId:
      genderCode: M
      maritalStatusId: 
-     surname: Fuller
-     firstName: Sean
+     surname: Tolentino
+     firstName: Maki
      middleName: ""
      preferredName: ""
      dob: 1975-4-21
@@ -123,14 +123,14 @@
      titleId:
      genderCode: M
      maritalStatusId: 
-     surname: Melbourne
+     surname: Calulo
      firstName: Ronald
      middleName: ""
      preferredName: ""
      dob: 1982-5-23
      phoneHome: 654-3210
      phoneWork: ""
-     phoneMobile: 09297700500
+     phoneMobile: 09199900403
      phoneFax: ""
      email: "" 
      emailConfirmFlag: N
