First set of revision.

--- a/conf/dev.conf
+++ b/conf/dev.conf
@@ -33,15 +33,15 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
 
-db.default.driver=oracle.jdbc.driver.OracleDriver
-db.default.url="jdbc:oracle:thin:@192.168.1.152:1521/XE"
-db.default.user=ghi_2fa
-db.default.pass=ghi_2fa
+#db.default.driver=oracle.jdbc.driver.OracleDriver
+#db.default.url="jdbc:oracle:thin:@192.168.1.152:1521/XE"
+#db.default.user=ghi_2fa
+#db.default.pass=ghi_2fa
 
 
 #
@@ -51,7 +51,7 @@ db.default.pass=ghi_2fa
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-evolutionplugin=disabled
+#evolutionplugin=disabled
 
 # Ebean configuration
 # ~~~~~
@@ -73,5 +73,7 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
-
+# SMS Gateway URL
 sms.gateway.base_url="http://192.168.1.152:8080/sms-gw/ws"
+
+
