--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -74,4 +74,4 @@ logger.play=INFO
 logger.application=DEBUG
 
 
-sms.gateway.base_url="http://192.168.1.152:8080/sms-gw/ws"
+sms.gateway.base_url="http://192.168.1.152:8080/sms-gw/ws/"
