--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,24 +33,20 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
 
 db.default.driver=oracle.jdbc.driver.OracleDriver
-db.default.url="jdbc:oracle:thin:@192.168.1.152:1521/XE"
+db.default.url="jdbc:oracle:thin:@192.168.1.54:1521/XE"
 db.default.user=ghi_2fa
 db.default.pass=ghi_2fa
-
-
-#
-# You can expose this datasource via JNDI if needed (Useful for JPA)
-# db.default.jndiName=DefaultDS
 
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
+#evolutionplugin=enabled
 evolutionplugin=disabled
 
 # Ebean configuration
@@ -74,4 +70,4 @@ logger.play=INFO
 logger.application=DEBUG
 
 
-sms.gateway.base_url="http://192.168.1.152:8080/sms-gw/ws"
+sms.gateway.base_url="http://192.168.1.54:8080/sms-gw/ws"
